# leet-llm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
001_numpy_array_basics/: README.md  array_basics.py  solution.py
002_broadcasting/: README.md  broadcasting.py  solution.py
003_affine/: README.md  affine.py  solution.py
004_batched_matmul/: README.md  batched_matmul.py  solution.py
005_softmax/: README.md  softmax.py  solution.py
006_logsumexp/: README.md  logsumexp.py  solution.py
007_topk/: README.md  solution.py  topk.py
008_gather_onehot/: README.md  gather_onehot.py  solution.py
009_masking/: README.md  masking.py  solution.py
010_rng_sampling/: README.md  rng_sampling.py  solution.py
011_interleave_halves/: README.md  solution.py
101_char_vocab/: README.md  char_vocab.py  solution.py
102_byte_tokenizer/: README.md  byte_tokenizer.py  solution.py
103_bpe_step/: README.md  bpe_step.py  solution.py
104_bpe_train/: README.md  bpe_train.py  solution.py
105_tokenizer_io/: README.md  solution.py  tokenizer_io.py
106_bpe_encode/: README.md  bpe_encode.py  solution.py
107_bpe_decode/: README.md  bpe_decode.py  solution.py
108_special_tokens/: README.md  solution.py  special_tokens.py
109_regex_pretokenize/: README.md  regex_pretokenize.py  solution.py
110_tiktoken_load_encode/: README.md  solution.py  tiktoken_load_encode.py
111_padding_and_mask/: README.md  padding_and_mask.py  solution.py
112_position_indices/: README.md  position_indices.py  solution.py
113_build_batch/: README.md  build_batch.py  solution.py
201_embedding/: README.md  embedding.py  solution.py
202_activations/: README.md  activations.py  solution.py
203_layer_norm/: README.md  layer_norm.py  solution.py
204_positional_encoding/: README.md  positional_encoding.py  solution.py
205_scaled_dot_product_attention/: README.md  scaled_dot_product_attention.py  solution.py
206_multi_head_attention/: README.md  multi_head_attention.py  solution.py
207_feed_forward/: README.md  feed_forward.py  solution.py
208_residual_norm/: README.md  residual_norm.py  solution.py
209_encoder_block/: README.md  encoder_block.py  solution.py
210_decoder_block/: README.md  decoder_block.py  solution.py
211_gpt_block/: README.md  (+1 more)
(+285 files in other folders)
