[project]
name = "leet-llm"
version = "0.1.0"
description = "A LeetCode-style course that builds a full LLM from scratch, one testable function at a time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "regex>=2026.5.9",
    "scipy>=1.10",
]

[project.scripts]
grade = "leet_llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leet_llm"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
# `gen` is an AUTHORING-ONLY group: torch is the trusted oracle used to generate the
# frozen .npz test fixtures for L2 (sdpa, mha, blocks, rope, gqa, llama block). It is
# NEVER imported at `grade` time — tests load the committed .npz, staying torch-free.
#   uv sync --group gen      # to (re)generate fixtures
gen = [
    "torch>=2.0",
    "transformers>=4.40",
]

# Torch also returns for the PyTorch phase (L5-L6); kept out of the default deps so the
# NumPy phase (L0-L4) stays lightweight to install.

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
# Make the repo root importable so tests can `from leet_llm_grader import load`.
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-q"
